--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,22 @@ version: '3.1'
 services:
   db:
     image: mysql:8.0.36
-    container_name: easy2_easy3_db
+    container_name: gtbe
     environment:
       MYSQL_ROOT_PASSWORD: Toshiba_25
-      MYSQL_DATABASE: easy2-easy3-api
+      MYSQL_DATABASE: gtbe
     ports:
-      - "3068:3306"
+      - "3069:3306"
     volumes:
       - dbdata:/var/lib/mysql
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    container_name: easy2_easy3_pma
+    container_name: gtbe_pma
     environment:
-      PMA_HOST: easy2_easy3_db
+      PMA_HOST: gtbe
       PMA_ARBITRARY: 1
     restart: always
     ports:
-      - 8082:80
+      - 8083:80
 volumes:
   dbdata:
